# adl24-sleep-stage

./: .gitignore  README.md  compute_fft.py  conformer.py  data.dvc  lightning_modules.py  model_training.py  pyproject.toml  random_projection_pretraing.ipynb  sleep-edf-data.ipynb  sleep-edf-npz.ipynb  test.ipynb
.dvc/: config
BESTRq_classes/: BESTRq.py  conformer.py  models.py  train.py
models/: BestRqEncoder.pkl  CNN_BiLSTM_Attention.py  CNNencode_bestrq.pkl  PainAttEEG.pkl  PainAttEncoder.pkl  PainAttFinal_EOG.pkl
models/PainAttFramework/: mainPainatt.py  mscn.py  se_resnet.py  transformer_encoder.py
